Regression: Speaker ignoring of the starting position in NLA track #110336

Closed
opened 2023-07-21 08:52:14 +02:00 by Ian-Dorow · 4 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics Intel 4.5.0 - Build 31.0.101.2111

Blender Version
Broken: version: 3.6.1, branch: blender-v3.6-release, commit date: 2023-07-17 12:50, hash: 8bda729ef4dc
Worked: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1d3

Short description of error
Sound track of a "Speaker" object is ignoring starting position of the NLA Strip.

Exact steps for others to reproduce the error
To hear the ignoring of the start position of the sound NLA Strip, play scene animation.
The file with the test setup is attached.

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: Intel(R) UHD Graphics Intel 4.5.0 - Build 31.0.101.2111 **Blender Version** Broken: version: 3.6.1, branch: blender-v3.6-release, commit date: 2023-07-17 12:50, hash: `8bda729ef4dc` Worked: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: `e1ccd9d4a1d3` **Short description of error** Sound track of a "Speaker" object is ignoring starting position of the NLA Strip. **Exact steps for others to reproduce the error** To hear the ignoring of the start position of the sound NLA Strip, play scene animation. The file with the test setup is attached.
Ian-Dorow added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-21 08:52:14 +02:00

To crash Blender 3.6, try to grab and move any of sound NLA Strips of a "Speaker" object either empty or with sound.

#110161

> To crash Blender 3.6, try to grab and move any of sound NLA Strips of a "Speaker" object either empty or with sound. #110161

Can confirm the other issue as well. I suspect this is caused by 68af6f6836

Can confirm the other issue as well. I suspect this is caused by 68af6f6836a965ff61fb92702eae5cd756150294
Pratik Borhade changed title from Speaker sound NLA strip issues: the ignoring of the starting position and a crash on move. to Speaker: Ignoring of the starting position in NLA track 2023-07-21 12:39:01 +02:00
Pratik Borhade changed title from Speaker: Ignoring of the starting position in NLA track to Regression: Speaker ignoring of the starting position in NLA track 2023-07-21 12:40:32 +02:00

@neXyon , can you check?

@neXyon , can you check?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-24 16:45:54 +02:00

Guess we can safely backport the fix to LTS, added: #109399

Guess we can safely backport the fix to LTS, added: #109399
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110336
There is no content yet.