Fix #110336 Regression: Speaker ignoring of the starting position in NLA track

Porting fix from upstream:

Bugfix for reading an animated property with a negative time value.

This can now happen in SequenceHandle::seek.